--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lenny's Greenhouses</title>
-        <link rel="icon" href="/Main/favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="/Main/styles.css">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="stylesheet" href="/styles.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
          <header class="top-banner">
             <div class="banner-content">
                 <div class="logo">
-                    <a href="/Main/index.html">
+                    <a href="/index.html">
                         <img src="/images/tpslogo.png" alt="Company Logo">
                     </a>
                 </div>
@@ -61,7 +61,7 @@
                      </div>
 
                     <button id="logout-button" style="display: none;" onclick="logoutUser()">Log Out</button>
-                    <a href="/Main/profilepage.html" id="profile-link" style="display: none;" onclick="goToProfile()">Profile</a>
+                    <a href="profilepage.html" id="profile-link" style="display: none;" onclick="goToProfile()">Profile</a>
                 </div>
             </div>
             
@@ -84,7 +84,7 @@
                 </li>
                 <li>
                     <i class="fa-brands fa-envira"></i>
-                    <a href="/Main/newsletter.html">Sign up for our newsletter here</a>
+                    <a href="newsletter.html">Sign up for our newsletter here</a>
                 </li>
             </ul>
 
@@ -111,13 +111,13 @@
 
         <!-- Navbar -->
         <nav class="navbar">
-            <a href="/Main/newplants.html">New</a>
-            <a href="/Main/tropicals.html">Tropicals</a>
-            <a href="/Main/flowering.html">Flowering</a>
-            <a href="/Main/succulents.html">Succulents & Cacti</a>
-            <a href="/Main/edible.html">Edible</a>
-            <a href="/Main/airpurifying.html">Air Purifying</a>
-            <a href="/Main/all.html">All</a>
+            <a href="/newplants.html">New</a>
+            <a href="/tropicals.html">Tropicals</a>
+            <a href="/flowering.html">Flowering</a>
+            <a href="/succulents.html">Succulents & Cacti</a>
+            <a href="/edible.html">Edible</a>
+            <a href="/airpurifying.html">Air Purifying</a>
+            <a href="/all.html">All</a>
         </nav>
 
         <!-- Image Gallery -->
@@ -135,7 +135,7 @@
                             </div>
                             <div class="image-links">
                                 <a href="plants/hibiscus-yellow.html">See More<i class="fa-solid fa-chevron-right"></i></a>
-                                <a href="/Main/newplants.html">New Arrivals<i class="fa-solid fa-chevron-right"></i></a>
+                                <a href="/newplants.html">New Arrivals<i class="fa-solid fa-chevron-right"></i></a>
                             </div>
                         </div>
                         <!-- Image 2-->
@@ -147,7 +147,7 @@
                             </div>
                             <div class="image-links">
                                 <a href="plants/bird-of-paradise.html">See More<i class="fa-solid fa-chevron-right"></i></a>
-                                <a href="/Main/tropicals.html">Tropicals<i class="fa-solid fa-chevron-right"></i></a>
+                                <a href="/tropicals.html">Tropicals<i class="fa-solid fa-chevron-right"></i></a>
                             </div>
                         </div>
                         <!-- Image 3 -->
@@ -159,7 +159,7 @@
                             </div>
                             <div class="image-links">
                                 <a href="plants/christmas-cactus.html">See More<i class="fa-solid fa-chevron-right"></i></a>
-                                <a href="/Main/succulents.html">Succulents<i class="fa-solid fa-chevron-right"></i></a>
+                                <a href="/succulents.html">Succulents<i class="fa-solid fa-chevron-right"></i></a>
                             </div>
                         </div>
                     </div>
@@ -179,22 +179,22 @@
         <section class="plant-categories">
             <div class="plant-category">
                 <p>New Arrivals</p>
-                <a href="/Main/newplants.html"><img src="/images/begonia.jpg" alt="Plant Type 1"></a>
+                <a href="/newplants.html"><img src="/images/begonia.jpg" alt="Plant Type 1"></a>
             </div>
 
             <div class="plant-category">
                 <p>Most Popular</p>
-                <a href="#"><img src="/images/desertrose.jpg" alt="Plant Type 2"></a>
+                <a href="/popular.html"><img src="/images/desertrose.jpg" alt="Plant Type 2"></a>
             </div>
 
             <div class="plant-category">
                 <p>On Sale</p>
-                <a href="#"><img src="/images/cot.jpg" alt="Plant Type 3"></a>
+                <a href="/sale.html"><img src="/images/cot.jpg" alt="Plant Type 3"></a>
             </div>
 
             <div class="plant-category">
                 <p>Edible</p>
-                <a href="/Main/edible.html"><img src="/images/lemontree.jpg" alt="Plant Type 4"></a>
+                <a href="/edible.html"><img src="/images/lemontree.jpg" alt="Plant Type 4"></a>
             </div>
         </section>
 
