--- a/azores-jasmine.html
+++ b/azores-jasmine.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenny's Greenhouses - Azores Jasmine</title>
-    <link rel="stylesheet" href="/Main/plantpages.css">
+    <link rel="stylesheet" href="plantpages.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <header class="top-banner">
         <div class="banner-content">
             <div class="logo">
-                <img src="images/tpslogo.png" alt="Company Logo">
+                <img src="tpslogo.png" alt="Company Logo">
             </div>
             <a href="#" class="cart-link">My Cart <i class="fa-solid fa-cart-shopping"></i></a>
             <div class="dropdown">
@@ -49,7 +49,7 @@
             </li>
             <li>
                 <i class="fa-brands fa-envira"></i>
-                <a href="/Main/newsletter.html">Sign up for our newsletter here</a>
+                <a href="newsletter.html">Sign up for our newsletter here</a>
             </li>
         </ul>
 
@@ -77,13 +77,14 @@
 
     <!-- Navbar -->
     <nav class="navbar">
-        <a href="/Main/index.html">Home</a>
-        <a href="/Main/newplants.html">New</a>
-        <a href="/Main/flowering.html">Flowering</a>
-        <a href="/Main/succulents.html">Succulents & Cacti</a>
-        <a href="/Main/edible.html">Edible</a>
-        <a href="/Main/airpurifying.html">Air Purifying</a>
-        <a href="/Main/all.html">All</a>
+        <a href="index.html">Home</a>
+        <a href="newplants.html">New</a>
+        <a href="tropicals.html">Tropicals</a>
+        <a href="flowering.html">Flowering</a>
+        <a href="succulents.html">Succulents & Cacti</a>
+        <a href="edible.html">Edible</a>
+        <a href="airpurifying.html">Air Purifying</a>
+        <a href="all.html">All</a>
     </nav>
 
     <!-- Product Information Section -->
@@ -91,7 +92,7 @@
     <div class="product-container">
         <!-- Left Column: Image -->
         <div class="product-image">
-            <img src="images/jasmine.jpg" alt="Plant Image">
+            <img src="jasmine.jpg" alt="Plant Image">
         </div>
 
         <!-- Right Column: Text and Controls -->
@@ -125,19 +126,19 @@
     <section class="plant-categories">
         <div class="plant-category">
             <p>New Arrivals</p>
-            <a href="/Main/newplants.html"><img src="images/begonia.jpg" alt="Plant Type 1"></a>
+            <a href="newplants.html"><img src="begonia.jpg" alt="Plant Type 1"></a>
         </div>
         <div class="plant-category">
             <p>Most Popular</p>
-            <a href="/Main/popular.html"><img src="images/desertrose.jpg" alt="Plant Type 2"></a>
+            <a href="popular.html"><img src="desertrose.jpg" alt="Plant Type 2"></a>
         </div>
         <div class="plant-category">
             <p>On Sale</p>
-            <a href="/Main/sale.html"><img src="images/cot.jpg" alt="Plant Type 3"></a>
+            <a href="sale.html"><img src="cot.jpg" alt="Plant Type 3"></a>
         </div>
         <div class="plant-category">
             <p>Edible</p>
-            <a href="/Main/edible.html"><img src="images/lemontree.jpg" alt="Plant Type 4"></a>
+            <a href="edible.html"><img src="lemontree.jpg" alt="Plant Type 4"></a>
         </div>
     </section>
 
