--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <h2>Hibiscus rosa-sinensis</h2>
                             </div>
                             <div class="image-links">
-                                <a href="hibiscus-yellow.html">See More<i class="fa-solid fa-chevron-right"></i></a>
+                                <a href="hibiscus-yellow.jpg">See More<i class="fa-solid fa-chevron-right"></i></a>
                                 <a href="newplants.html">New Arrivals<i class="fa-solid fa-chevron-right"></i></a>
                             </div>
                         </div>
