--- a/tropicals.html
+++ b/tropicals.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Tropicals - Lenny's Greenhouses</title>
         <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="/Main/plantpages.css"> <!---->
+        <link rel="stylesheet" href="plantpages.css"> <!---->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,8 +19,8 @@
          <header class="top-banner">
             <div class="banner-content">
                 <div class="logo">
-                    <a href="/Main/index.html">
-                        <img src="/images/tpslogo.png" alt="Company Logo">
+                    <a href="index.html">
+                        <img src="tpslogo.png" alt="Company Logo">
                     </a>
                 </div>
                 <a href="#" class="cart-link">My Cart <i class="fa-solid fa-cart-shopping"></i></a>
@@ -61,7 +61,7 @@
                      </div>
 
                     <button id="logout-button" style="display: none;" onclick="logoutUser()">Log Out</button>
-                    <a href="/Main/profilepage.html" id="profile-link" style="display: none;" onclick="goToProfile()">Profile</a>
+                    <a href="profilepage.html" id="profile-link" style="display: none;" onclick="goToProfile()">Profile</a>
                 </div>
             </div>
             
@@ -112,14 +112,14 @@
 
         <!-- Navbar -->
         <nav class="navbar">
-            <a href="/Main/index.html">Home</a>
-            <a href="/Main/newplants.html">New</a>
-            <a href="/Main/tropicals.html">Tropicals</a>
-            <a href="/Main/flowering.html">Flowering</a>
-            <a href="/Main/succulents.html">Succulents & Cacti</a>
-            <a href="/Main/edible.html">Edible</a>
-            <a href="/Main/airpurifying.html">Air Purifying</a>
-            <a href="/Main/all.html">All</a>
+            <a href="index.html">Home</a>
+            <a href="newplants.html">New</a>
+            <a href="tropicals.html">Tropicals</a>
+            <a href="flowering.html">Flowering</a>
+            <a href="succulents.html">Succulents & Cacti</a>
+            <a href="edible.html">Edible</a>
+            <a href="airpurifying.html">Air Purifying</a>
+            <a href="all.html">All</a>
         </nav>
 
 <!-- *** *** *** *** *** *** *** ADD NEW CODE HERE *** *** *** *** *** -->
@@ -156,22 +156,22 @@
         <section class="plant-categories">
             <div class="plant-category">
                 <p>New Arrivals</p>
-                <a href="/Main/newplants.html"><img src="/images/begonia.jpg" alt="Plant Type 1"></a>
+                <a href="newplants.html"><img src="begonia.jpg" alt="Plant Type 1"></a>
             </div>
 
             <div class="plant-category">
                 <p>Most Popular</p>
-                <a href="#"><img src="/images/desertrose.jpg" alt="Plant Type 2"></a>
+                <a href="popular.html"><img src="desertrose.jpg" alt="Plant Type 2"></a>
             </div>
 
             <div class="plant-category">
                 <p>On Sale</p>
-                <a href="#"><img src="/images/cot.jpg" alt="Plant Type 3"></a>
+                <a href="sale.html"><img src="cot.jpg" alt="Plant Type 3"></a>
             </div>
 
             <div class="plant-category">
                 <p>Edible</p>
-                <a href="/Main/edible.html"><img src="/images/lemontree.jpg" alt="Plant Type 4"></a>
+                <a href="edible.html"><img src="lemontree.jpg" alt="Plant Type 4"></a>
             </div>
         </section>
 
