--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                                 <h2>Hibiscus rosa-sinensis</h2>
                             </div>
                             <div class="image-links">
-                                <a href="hibiscus-yellow.jpg">See More<i class="fa-solid fa-chevron-right"></i></a>
+                                <a href="hibiscus-yellow.html">See More<i class="fa-solid fa-chevron-right"></i></a>
                                 <a href="newplants.html">New Arrivals<i class="fa-solid fa-chevron-right"></i></a>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
         <section class="plant-categories">
             <div class="plant-category">
                 <p>New Arrivals</p>
-                <a href="newplants.html"><img src="begonia.html" alt="Plant Type 1"></a>
+                <a href="newplants.html"><img src="begonia.jpg" alt="Plant Type 1"></a>
             </div>
 
             <div class="plant-category">
