--- a/tropicals.html
+++ b/tropicals.html
@@ -176,9 +176,9 @@
         </section>
 
         <!-- SCRIPTS -->
-        <script src="/Scripts/search.js"></script>
-        <script src="/Scripts/auth.js"></script>
-        <script src="/Scripts/tropicalsort.js"></script>
+        <script src="search.js"></script>
+        <script src="auth.js"></script>
+        <script src="tropicalsort.js"></script>
 
     </body>
 
